--- a/.github/workflows/ml-pipeline.yml
+++ b/.github/workflows/ml-pipeline.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest tests/
+          python -m pytest tests/
 
       - name: Upload trained model
         uses: actions/upload-artifact@v4
