--- a/.github/workflows/ml-pipeline.yml
+++ b/.github/workflows/ml-pipeline.yml
@@ -17,15 +17,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
+          pip install pytest
 
       - name: Train model
         run: |
-          python train.py
+          PYTHONPATH=$PYTHONPATH:$(pwd) python train.py
 
       - name: Run tests
         run: |
-          python -m pytest tests/
+          PYTHONPATH=$PYTHONPATH:$(pwd) python -m pytest tests/
 
       - name: Upload trained model
         uses: actions/upload-artifact@v4
