--- a/.github/workflows/ml-pipeline.yml
+++ b/.github/workflows/ml-pipeline.yml
@@ -18,15 +18,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
-          pip install pytest
+          pip install pytest pytest-cov
 
       - name: Train model
         run: |
           PYTHONPATH=$PYTHONPATH:$(pwd) python train.py
 
-      - name: Run tests
+      - name: Run tests with coverage
         run: |
-          PYTHONPATH=$PYTHONPATH:$(pwd) python -m pytest tests/
+          PYTHONPATH=$PYTHONPATH:$(pwd) python -m pytest tests/ --cov=model --cov-report=xml --verbose
 
       - name: Upload trained model
         uses: actions/upload-artifact@v4
