--- a/.github/workflows/ml-pipeline.yml
+++ b/.github/workflows/ml-pipeline.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          PYTHONPATH=$PYTHONPATH:$(pwd) python -m pytest tests/ --cov=model --cov-report=xml --verbose
+          PYTHONPATH=$PYTHONPATH:$(pwd) python -m pytest tests --cov=model --cov-report=xml --verbose
 
       - name: Upload trained model
         uses: actions/upload-artifact@v4
